[gd_scene load_steps=5 format=2]

[ext_resource path="res://map/block.gd" type="Script" id=1]
[ext_resource path="res://sprite/single_block.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=2]

[node name="block" type="StaticBody2D" groups=["BLOCK"]]
position = Vector2( 184, 120 )
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="coin_location_1" type="Position2D" parent="."]
position = Vector2( -48, -40 )

[node name="coin_location_2" type="Position2D" parent="."]
position = Vector2( 0, -40 )

[node name="coin_location_3" type="Position2D" parent="."]
position = Vector2( 48, -40 )

[node name="expiration_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="timeout" from="expiration_timer" to="." method="_on_expiration_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
